--- a/inventory/templates/inventory/food_add.html
+++ b/inventory/templates/inventory/food_add.html
@@ -19,12 +19,12 @@
                             <form class = "ui inverted form" method="POST">
                                 {% csrf_token %}
                                 <div class="three fields">
-                                    <div class="seven wide field">
+                                    <div class="six wide field">
                                         <label>Food</label>
                                         {{form.food}}
                                     </div>
                                         
-                                    <div class="five wide field">
+                                    <div class="six wide field">
                                         <label>Type</label>
                                         {{form.foodtype}}
                                     </div>
