--- a/inventory/templates/inventory/food_count_form.html
+++ b/inventory/templates/inventory/food_count_form.html
@@ -6,9 +6,10 @@
         <div class="three column row">
             <div class="four wide column"></div>
             <div class="eight wide column">
-                    <h1 class="ui header">{{ title }}
-                            <div class="sub header">{{ texthelp }}</div>
-                        </h1>
+               
+                <h1 class="ui header">{{ title }}
+                    <div class="sub header">{{ texthelp }}</div>
+                </h1>
                     
                         <div class="ui inverted segment">
                             {% if messages %}
@@ -31,12 +32,22 @@
                                 <div class="field">
                                     <div class="inline field">
                                         <div class="field">
-                                                <label>{{label}}</label>
+                                                {% if data.foodtype == 'Milk' %}
+                                                <label>Milk {{label}}</label>
+                                                {% else %}
+                                                <label>Dog Food {{label}}</label>
+                                                {% endif %}
                                         </div>
                                         {{form.quantity}}
+                                        {% if data.foodtype == 'Milk' %}
+                                        <div class="ui left pointing blue basic label">
+                                            Milk per grams.
+                                        </div>
+                                        {% else %}
                                         <div class="ui left pointing blue basic label">
                                             Dog Food per Kg.
                                         </div>
+                                        {% endif %}
                                     </div>
                                 </div>  
                                 <div class="ui inverted right aligned segment" style="padding: 0px;">
