--- a/inventory/templates/inventory/food_inventory_list.html
+++ b/inventory/templates/inventory/food_inventory_list.html
@@ -15,7 +15,8 @@
         <tr>
             <th>Food</th>
             <th>Type</th>
-            <th>Quantity</th>
+            <th>Quantity(kg)</th>
+            <th>Quantity(grams)</th>
             <th></th>
         </tr>
     </thead>
@@ -25,8 +26,13 @@
                 <td>
                     <a href="{% url 'inventory:food_inventory_details' data.id %}">{{ data.food }}</a>
                 </td>
-                <td>{{ data.food.foodtype }}</td>
-                <td>{{ data.quantity }}</td>
+                <td>{{ data.foodtype }}</td>
+                {% if data.foodtype == 'Milk' %}
+                    <td></td>
+                {% else %}
+                    <td>{{ data.quantity }}</td>
+                {% endif%}
+                <td>{{ data.quantity_grams }}</td>
                 <td class="two wide center aligned">
                     <a href="{% url 'inventory:food_count_form' data.id %}" style="margin-right:10px;">
                         <i class="teal list ol icon"></i>
