--- a/profiles/templates/profiles/sidebar_inventory.html
+++ b/profiles/templates/profiles/sidebar_inventory.html
@@ -40,7 +40,16 @@
                                         <a href="{% url 'inventory:miscellaneous_inventory_list'%}" class="item">Miscellaneous Inventory List View
                                                 <i class="clipboard list icon"></i>
                                         </a>
+                                    <a href="{% url 'unitmanagement:request_list'%}" class="item">Damaged Equipment List
+                                        <i class="clipboard list icon"></i>
+                                    </a>
                                         {% endif %}
+
+                                    {% if request.session.session_user_position == "Handler" %}
+                                    <a href="{% url 'unitmanagement:request_form'%}" class="item">Damaged Equipment
+                                        <i class="exclamation icon"></i>
+                                    </a>
+                                    {% endif %}
                                 </div>
                         </div>
                         <!>
