--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -131,8 +131,8 @@
               <a href="{% url 'training:fail_dog' data_ontraining.id %}" class = "tiny ui red basic button">Drop</a>
               {% else %}
 
-                <a href="{% url 'training:training_update_form' data_ontraining.id %}" class = "tiny ui blue basic button">Select</a>
-              <a href="{% url 'training:classify_k9_select' data_ontraining.id %}" class = "tiny ui orange basic button reassign">Reassign</a>
+              <a href="{% url 'training:training_update_form' data_ontraining.id %}" class = "tiny ui blue basic button">Select</a>
+              <!-- <a href="{% url 'training:classify_k9_select' data_ontraining.id %}" class = "tiny ui orange basic button reassign">Reassign</a> -->
               <a href="{% url 'training:fail_dog' data_ontraining.id %}" class = "tiny ui red basic button">Drop</a>
               {% endif %}
             </td>
